# dnsie

./: .gitignore  .travis.yml  Cargo.toml  README.MD
src/: fuzz.rs  lib.rs
src/dns/: common.rs  doh.rs  mod.rs
src/dns/packet/: mod.rs  primitives.rs  query.rs
src/dns/packet/parse/: mod.rs  parser_utils.rs
