[package]
name = "dnsie"
version = "0.1.0"
authors = ["teawithsand <teawithsand@gmail.com>"]
edition = "2018"
readme = "README.MD"
license = "MIT"
description = "DNS client written in rust. Desgined to implement DnsOverHttps and other client-side resolvers."
repository = "https://github.com/teawithsand/dnsie"
homepage = "https://github.com/teawithsand/dnsie"

[badges]
travis-ci = { repository = "teawithsand/dnsie", branch = "master" }
# maintenance = { status = "actively-developed" }

[features]
default = ["serialize", "doh"]
serialize = ["serde", "serde_derive"]
doh = ["hyper"]

[dependencies]
derive_more = "0.15.0"
hyper = { version = "0.13", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
rand = { version = "0.7", optional = true }
async-trait = "0.1"

# Required only for testing
[dev-dependencies]
base64 = "0.11.0"
hex = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }
hyper-openssl = { version = "0.8" }
tokio = { version = "0.2", features = ["full"] }

# [build-dependencies]
# bindgen = { version = "0.52", optional = true }